// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table activites {
  act_id int [increment, primary key]
  act_ext_key varchar [ note: "clé externe type D02"] 
  act_libelle varchar [not null]
  act_mode_rem varchar [note : "Mode de rémunération du prof a l'h ou au 1/4/ h/élève"] 
  dom_id int
  act_debut datetime
  act_fin datetime
  tyac_id int 
}

Table domaines {
  dom_id int [increment, primary key]
  dom_libelle varchar [note : "Danse, "]
}

Table typeactivite {
  tyac_id int [increment, primary key] 
  tyac_libelle varchar [note : "cours, événement,adhésion, stage, don, Crowdfunding" ]
}
Table personnes {
  per_id int [increment, primary key]
  per_nom varchar [not null]
  civ_id int 
  per_prenom varchar [not null]
  per_tel varchar [unique]
  per_email varchar [not null]
  per_adresse varchar
  per_code_postal varchar
  per_ville varchar
  per_dat_naissance datetime
}

Table civilities {
  civ_id int [increment, primary key]
  civ_libelle varchar 
}

Table typerole {
tyro_id int [increment, primary key]
tyro_libelle varchar [note :"animateur, référent, etc"]
}

 Table role {
  rol_id int [increment, primary key]
  tyro_id int
  pers_id int
  act_id int

 }

Table reglements {
  reg_id int [increment, primary key]
  reg_montant float
  reg_mode varchar 
  reg_date varchar
}
Table tarifs {
  tar_id int [increment, primary key]
  ans_id int 
  act_id int
  tar_montant float
  tar_libelle varchar
}

Table an_exercice {
  ans_id int [increment, primary key]
  ans_libelle varchar [note:"2019-2020, 2020-2021,..."]
  ans_date_debut datetime
  ans_date_fin datetime
}

Table inscriptions {
  ins_id int [increment, primary key]
  per_id int 
  act_id int 
  ins_date_inscription date [not null]
  id_reg int
}

ref : "personnes"."civ_id" - "civilities"."civ_id"
ref : "activites"."act_id" < "inscriptions"."act_id"
ref : "inscriptions"."per_id" - "personnes"."per_id"
Ref: "reglements"."reg_id" < "inscriptions"."id_reg"
Ref: "domaines"."dom_id" > "activites"."dom_id"
Ref: "an_exercice"."ans_id" < "tarifs"."ans_id"
Ref: "tarifs"."act_id" < "activites"."act_id"
Ref: "typeactivite"."tyac_id" < "activites"."tyac_id"
Ref: "typerole"."tyro_id" <> "role"."tyro_id"
Ref: "role"."pers_id" < "personnes"."per_id"
Ref: "activites"."act_id" < "role"."act_id"